# incident_micro_exmpl

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 8aae124e1488_initial_migration.py
scripts/: docker-entrypoint.sh
src/: consumer.py  main.py
src/api/: dependencies.py  incidents.py
src/core/: config.py  database.py
src/domain/: models.py  schemas.py
src/infrastructure/: cache.py  error_middleware.py  security.py  security_middleware.py
src/services/: incident_repository.py  incident_service.py  kafka_service.py  telegram_service.py
